--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -10,23 +10,7 @@
       - if authorized?
         .col.s12.offset-m3.offset-s4
           = link_to "Modifier le profil", edit_user_registration_path, class: :'light-green-text'
-      .col.s4.offset-m1.m2
-        = image_tag avatar_url(@user, 110), class: :'circle responsive-img'
-      .col.s8.m8.infos
-        %h5= name_or "Nom non renseigné"
-        %h6.grey-text= @user.email
-        %h6.grey-text.hide-on-small-only
-          %span.tooltipped{'data-tooltip' => 'Localisation'}
-            %i.mdi-maps-place
-            = location_or "N/A"
-          &nbsp;
-          %span.tooltipped{'data-tooltip' => 'Site web'}
-            %i.mdi-social-public
-            = link_to (get_domain(website_or("N/A"))), website_or("#"), class: :'grey-text', target: :_blank
-          &nbsp;
-          %span.tooltipped{'data-tooltip' => 'Dernière connexion'}
-            %i.mdi-action-history
-            = distance_of_time_in_words @user.last_sign_in_at, Time.now
+      = render 'profile', user: @user
     .row
       .col.s12.m10.offset-m1.center
         %ul.tabs.center
@@ -42,7 +26,8 @@
             %li.tab.col.s2
               %a{href: :'#identites'}
                 identit&eacute;s
-                %span.grey-text.lighten-2 4
+                %span.grey-text.lighten-2= identities_number
+
     .row
       #templates.col.s12.m10.offset-m1
         .row
