--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -49,8 +49,8 @@
     .row
       .col.offset-m1.s12.m10
         %h5.arrowed-title Portabilit&eacute; ? Check
-      .col.hide-on-small-only.m3.offset-m1
-        = image_tag "globe.png", class: :'responsive-img'
+      .col.hide-on-small-only.m3.offset-m1.text-left
+        = image_tag "globe.png", class: :'responsive-img', :style => "width: 175px;"
       .col.s12.m7
         %p
           Le compilateur Hobbes est compl&egrave;tement portable, sans installation, et multi-plateformes.
@@ -90,7 +90,7 @@
       .col.s12.m11
         %h5.arrowed-title Faîtes comme chez vous
       .col.hide-on-small-only.m2.offset-m1
-        = image_tag "customize2.png", class: :'responsive-img'
+        = image_tag "customize2.png", class: :'responsive-img', :style => "-webkit-transform: rotate(-45deg);-moz-transform: rotate(-45deg); -o-transform: rotate(-45deg); -ms-transform: rotate(-45deg); transform: rotate(-45deg)"
       .col.s12.m8
         %p
           Hobbes est flexible et mall&eacute;able. T&eacute;l&eacute;chargez et installez d'autres templates
@@ -120,7 +120,7 @@
       .col.s12.m8
         %h5.arrowed-title Hobbes en action
       .col.m9.s12
-        = image_tag "video.png", class: :'responsive-img z-depth-1 video'
+        = image_tag "video_marron.png", class: :'responsive-img z-depth-1 video'
       .col.m3.hide-on-small-only.content
         %h6 Contenu
         %ul
