Rails image in css helpers

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -80,13 +80,13 @@ html.turbolinks-progress-bar::before {
 }
 
 .btn-background-green {
-  background: url('background_vert_button.png');
+  background: image-url('background_vert_button.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .btn-background-brown {
-  background: url('background_marron_button_2.png');
+  background: image-url('background_marron_button_2.png');
   background-repeat: no-repeat;
   background-size: cover;
 }
