--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
     %meta{name: :description, :content => desc}
     %meta{name: :author, :content => 'Logan Braga Maxime Guillermet Marie Nuel'}
     %meta{name: :keywords, :content => keywords}
+    %meta{name: :viewport, :content => "width=device-width, initial-scale=1"}
 
     %link{:href => 'http://fonts.googleapis.com/css?family=Open+Sans:800,700,400,300', rel: :stylesheet, type: :'text/css'}
     = stylesheet_link_tag 'application', media: 'all'
