--- a/app/assets/stylesheets/_navbar.scss
+++ b/app/assets/stylesheets/_navbar.scss
@@ -2,9 +2,10 @@ nav {
   height: 80px;
   position: fixed;
   top: 0;
-  z-index: 999;
+  z-index: 9999;
   box-shadow: none;
   border-bottom: 1px solid #eeeeee;
+  transition: top 0.2s ease-in-out;
 }
 
 nav ul li:hover, .dropdown-content li:hover, ul.side-nav li:hover {
@@ -52,6 +53,9 @@ nav img.brand-logo {
 }
 
 @media (max-width: 992px) {
+  nav {
+    z-index: 999;
+  }
   // nav {
   //   position: absolute;
   // }
@@ -87,4 +91,8 @@ nav img.brand-logo {
 .nav-off nav {
   display: none;
   visibility: hidden;
+}
+
+.nav-up {
+  top: -81px;
 }
