Community section image background placement fix

--- a/app/assets/stylesheets/sections/_presentation.scss
+++ b/app/assets/stylesheets/sections/_presentation.scss
@@ -114,7 +114,13 @@
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
-  // background-position: center -150px;
+  background-position: center -150px;
+}
+
+@media (max-width: 1100px) {
+  #community {
+    background-position: center center;
+  }
 }
 
 #quickstart {
