Users forms now bigger on medium screens

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
 .container
   %br
   .row
-    .col.s12.m6.offset-m3.z-depth-1.white
+    .col.s12.l6.offset-l3.m10.offset-m1.z-depth-1.white
       .sign-in-card
         .center.logo
           = logo_link_to_root "responsive-img"
