Home fixes for small screens : text in small buttons now hides less important words

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -82,7 +82,8 @@
         = image_tag "rocket_white.png", class: :'responsive-img rocket'
     .col.s12.center
       %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large brown darken-4 white-text'}
-        j'essaye Hobbes gratuitement
+        j'essaye Hobbes
+        %span.hide-on-small-only gratuitement
 
 %section#customize
   .container.text-right
@@ -111,7 +112,8 @@
           %b Hobbes Communaut&eacute;.
         %br
         %a{href: page_path('community'), class: :'tooltipped waves-effect waves-light btn btn-flat btn-large white-text btn-border', 'data-tooltip' => "100% gratuit !"}
-          je rejoins la communaut&eacute; Hobbes
+          je rejoins la communaut&eacute;
+          %span.hide-on-small-only Hobbes
 
 
 %section#video
