--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -66,7 +66,7 @@
 %section#quickstart
   .container.text-left
     .row
-      .col.offset-m1
+      .col.offset-m1.s12
         %h5.arrowed-title D&eacute;marrez en quelques secondes
       .col.m5.s12.offset-m1
         %p
