--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -81,7 +81,7 @@
       .col.m5.hide-on-small-only.text-right
         = image_tag "rocket_white.png", class: :'responsive-img rocket'
     .col.s12.center
-      %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large brown darken-4 white-text'}
+      %a{href: page_path('guides'), class: :'waves-effect waves-light btn btn-flat btn-large btn-border brown-hover'}
         j'essaye Hobbes
         %span.hide-on-small-only gratuitement
 
@@ -111,7 +111,7 @@
           Partagez vos templates, modules et tutoriels avec les utilisateurs Hobbes du monde entier gr&acirc;ce au service
           %b Hobbes Communaut&eacute;.
         %br
-        %a{href: page_path('community'), class: :'tooltipped waves-effect waves-light btn btn-flat btn-large white-text btn-border', 'data-tooltip' => "100% gratuit !"}
+        %a{href: page_path('community'), class: :'waves-effect waves-light btn btn-flat btn-large white-text btn-border green-hover', 'data-tooltip' => "100% gratuit !"}
           je rejoins la communaut&eacute;
           %span.hide-on-small-only Hobbes
 
