--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -34,6 +34,8 @@ footer {
 
   .footer-copyright {
     background: #333;
+    z-index: -2;
+    box-shadow: inset 0px 10px 10px 0px #303030;
     padding: 25px 0;
 
     .copy {
@@ -98,4 +100,3 @@ footer {
     }
   }
 }
-
