Remove arrow in front of quickstart title

--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -67,7 +67,7 @@
   .container.text-left
     .row
       .col.offset-m1.s12
-        %h5.arrowed-title D&eacute;marrez en quelques secondes
+        %h5 D&eacute;marrez en quelques secondes
       .col.m5.s12.offset-m1
         %p
           Hobbes a &eacute;t&eacute; con&ccedil;u par des &eacute;tudiants, pour des &eacute;tudiants.
