Lighter waves effect in navbar

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -116,3 +116,7 @@ h1, h2, h3, h4, h5, h6, a, p {
 a.submit {
   display: none;
 }
+
+.waves-effect.waves-medium .waves-ripple {
+  background-color: rgba(220, 220, 220, 0.65);
+}
