Addendum plurals => addenda

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -28,7 +28,7 @@
           %li
             %a.grey-text{:href => page_path('contribute')} Contribuer
       .col.l3.m4.s12
-        %h5 Addendum
+        %h5 Addenda
         %ul
           %li
             %a.grey-text{:href => page_path('about')} À Propos
