--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -38,7 +38,7 @@
           %li
             %a.grey-text{:href => page_path('about')} À Propos
           %li
-            %a.grey-text{:href => page_path('contact')} Contact
+            %a.grey-text{:href => contact_path} Contact
           %li
             %a.grey-text{:href => "http://www.gnu.org/copyleft/gpl.html", target: :_blank} Licence
   .footer-copyright.darken-4
