Form validation error now showing on textarea

--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -53,7 +53,7 @@ form {
     margin-top: -5px;
   }
 
-  input.error {
+  input.error, textarea.input-error {
     font-weight: normal;
     font-size: 1em;
     margin-top: 0;
@@ -63,7 +63,7 @@ form {
     padding: 0 12px;
   }
 
-  input.input-error {
+  input.input-error, textarea.input-error {
     border-bottom: 1px solid #F44336 !important;
     box-shadow: 0 1px 0 0 #F44336 !important;
   }
