--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -120,3 +120,11 @@ a.submit {
 .waves-effect.waves-medium .waves-ripple {
   background-color: rgba(220, 220, 220, 0.65);
 }
+
+.photo-bloc {
+  margin-top: 40px;
+
+  h4 {
+    font-weight: bold;
+  }
+}
