Select first tab of profile by default

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -15,7 +15,7 @@
       .col.s12.m10.offset-m1.center
         %ul.tabs.center
           %li.tab.col
-            %a{href: :'#templates'}
+            %a.active{href: :'#templates'}
               templates
               %span.badge 0
           %li.tab.col
