--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -21,11 +21,8 @@
           %li
             = nav_link "téléchargement", page_path('download')
           %li
-            %a{href: :'#!', :class => "dropdown-button", :'data-activates' => "main_drop"}
+            %a{href: :'#!', :class => "dropdown-button", :'data-activates' => "main_drop"}<
               espace membre
-              - if user_signed_in?
-                %i.mdi-action-verified-user.right.signedin>
-              - else
-                %i.mdi-navigation-arrow-drop-down.right.signedoff>
+              = nav_auth_icon
         %a{href: :'#', class: :'button-collapse', :'data-activates' => 'nav-mobile'}
           %i.mdi-navigation-menu
