About page photos size fix

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -17,18 +17,19 @@
         %hr
         %br
     .row.center
-      .col.m4.s12.photo-bloc
-        = image_tag 'http://placehold.it/200x200', :class => 'responsive-img circle'
-        %h4.light-green-text.darken-1.lowercase.small-caps Marie Nuel
-        %p
-          Communication, pr&eacute;sence sur les r&eacute;seaux sociaux
-      .col.m4.s12.photo-bloc
-        = image_tag 'http://placehold.it/200x200', :class => 'responsive-img circle'
-        %h4.light-green-text.darken-1.lowercase.small-caps Logan Braga
-        %p
-          D&eacute;veloppement logiciel et site, maintenance
-      .col.m4.s12.photo-bloc
-        = image_tag 'http://placehold.it/200x200', :class => 'responsive-img circle'
-        %h4.light-green-text.darken-1.lowercase.small-caps Maxime Guillermet
-        %p
-          Design graphique, tutoriels et guides texte et vid&eacute;o
+      .col.s12.m10.offset-m1
+        .col.l4.s12.photo-bloc
+          = image_tag 'http://placehold.it/175x175', :class => 'responsive-img circle'
+          %h5.light-green-text.darken-1.lowercase.small-caps Marie Nuel
+          %p
+            Communication, pr&eacute;sence sur les r&eacute;seaux sociaux
+        .col.l4.s12.photo-bloc
+          = image_tag 'http://placehold.it/175x175', :class => 'responsive-img circle'
+          %h5.light-green-text.darken-1.lowercase.small-caps Logan Braga
+          %p
+            D&eacute;veloppement logiciel et site, maintenance
+        .col.l4.s12.photo-bloc
+          = image_tag 'http://placehold.it/175x175', :class => 'responsive-img circle'
+          %h5.light-green-text.darken-1.lowercase.small-caps Maxime Guillermet
+          %p
+            Design graphique, tutoriels et guides texte et vid&eacute;o
