Blockquote styling for contact page

--- a/app/views/contact_messages/new.html.haml
+++ b/app/views/contact_messages/new.html.haml
@@ -11,12 +11,12 @@
           Chez Hobbes, il nous tient &agrave; cœur de rester au plus pr&egrave;s de nos utilisateurs. Une remarque, une id&eacute;e, une suggestion ?
           Un petit probl&egrave;me ? N'h&eacute;sitez pas &agrave; nous le faire savoir.
         - if user_signed_in?
-          %p<
+          %blockquote<
             Vous &ecirc;tes authentifi&eacute; en tant que
             %b #{current_user.email}.
             Votre identit&eacute; sera automatiquement associ&eacute;e aux messages que vous nous envoyez.
         - else
-          %p
+          %blockquote
             Indiquer votre adresse email dans le champ "Auteur" n'est pas obligatoire, mais notez que nous ne sommes pas en mesure de vous r&eacute;pondre sans.
         %br
       .row
